Thu Oct  2 00:02:55 2003  Owen Taylor  <otaylor@redhat.com>

	* tests/gobject/Makefile.am test/gobject/ifaceinherit.c:
	Tests of interface inheritance and overriding.

2003-09-30  Tor Lillqvist  <tml@iki.fi>

	* glib/gspawn-win32.c (do_spawn): Call protect_argv() in
	do_spawn() instead of in do_spawn_with_pipes() so that we can use
	the original argv[0] as the program file name parameter to
	spawnv() in the shortcut (doing without helper process)
	code. Fixes problem if GIMP 1.3 was installed in a path with
	spaces in the name.

Tue Sep 30 15:31:16 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* glib/guniprop.c (has_more_above): make the argument const to
	get rid of warning

	* glib/garray.c (g_byte_array_remove_range): insert cast to get
	rid of warning

2003-09-29  Tor Lillqvist  <tml@iki.fi>

	* tests/testglib.c (main): Use hardcoded name for DLL, as there is
	no reliable way to determine it at compile or run time anyway. 

2003-09-29  Matthias Clasen  <maclas@gmx.de>

	* glib/guniprop.c (g_unichar_get_mirror_char): Add "Since: 2.4" 
	to docs.

Thu Sep 25 15:43:08 2003  Owen Taylor  <otaylor@redhat.com>

	* tests/gobject/testmodule.[ch] test/gobject/Makefile.am:
	Dummy dynamic type module for testing type plugin code
	and dynamic types.

	* test/gobject/defaultiface.c: Test of 
	g_type_default_interface_ref() and friends.

2003-09-28  Gediminas Paulauskas  <menesis@delfi.lt>

    * configure.in: Added lt to ALL_LINGUAS.

2003-09-25  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.def: Remove g_bsearch_array_* entries that don't exist
	any longer. (ABI change?)

Thu Sep 25 15:01:37 2003  Owen Taylor  <otaylor@redhat.com>

	* tests/Makefile.am (SUBDIRS): Add gobject/.

Fri Sep 12 16:26:21 2003  Owen Taylor  <otaylor@redhat.com>

	* tests/gobject/ configure.in: New directory, framework 
	for automated GObject tests.

	* tests/gobject/override.c: Move testoverride.c
	here, automate.

	* tests/gobject/ifaceinit.c: Move testifaceinit.c here.
